<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_hint"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:title="Call"
        android:id="@+id/callContact"
        app:showAsAction="always"
        android:icon="@android:drawable/stat_sys_phone_call"/>
    <item
        android:id="@+id/itemViewOrAdd"
        android:title="@string/view_contact"
        />

    <item
        android:id="@+id/itemBlockedContact"
        android:title="@string/block_contact"/>

    <item
        android:id="@+id/itemMute"
        android:title="@string/mute"/>

    <item
        android:id="@+id/pickRings"
        android:title="@string/pick_sound"/>


</menu>