<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_padding">

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="@string/inputKeywords"
        android:inputType="textPassword"
        android:hint="@string/new_password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/color_red"
        android:gravity="right"
        android:text="@string/register_password_hint"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="@string/inputKeywords"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"/>

</LinearLayout>