<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/lvConversation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_above="@+id/layoutPassword"/>

    <LinearLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/main_activity_no_conversation_padding_top_bottom"
        android:paddingBottom="@dimen/main_activity_no_conversation_padding_top_bottom"
        android:paddingLeft="@dimen/main_activity_no_conversation_padding_left_right"
        android:paddingRight="@dimen/main_activity_no_conversation_padding_left_right"
        android:background="@color/activity_conversation_layout_enter_pass_bg"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_above="@+id/layoutControlSend"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/conversation_activity_enter_password_height"
            android:background="@drawable/send_message_bg"
            android:hint="@string/enter_password_max_length"
            android:digits="@string/inputKeywords"
            android:maxLength="@integer/password_max_length_encrypt"
            android:textSize="@dimen/normal_text_size"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutControlSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/activity_conversation_layout_enter_message_bg"
        android:paddingTop="@dimen/main_activity_no_conversation_padding_top_bottom"
        android:paddingBottom="@dimen/main_activity_no_conversation_padding_top_bottom"
        android:paddingLeft="@dimen/main_activity_no_conversation_padding_left_right"
        android:paddingRight="@dimen/main_activity_no_conversation_padding_left_right"
        android:layout_alignParentBottom="true"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/etEnterMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/conversation_activity_enter_message_min_height"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/normal_space"
            android:layout_toLeftOf="@+id/layoutRight"
            android:layout_toStartOf="@+id/layoutRight"
            android:hint="@string/enter_message_hint"
            android:textSize="@dimen/normal_text_size"
            android:background="@drawable/send_message_bg"/>

        <LinearLayout
            android:id="@+id/layoutRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/etEnterMessage"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMessageCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="165/2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_space" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="@dimen/main_activity_no_conversation_send_icon_size"
                android:layout_height="@dimen/main_activity_no_conversation_send_icon_size"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_send_sms"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
